@@ -1471,7 +1471,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '208';
+$wgStyleVersion = '209';
 
 
 # Server-side caching:
